# fpga_env

./: CMakeLists.txt  config.sh  run.sh  sim_run.sh
fpga-xclbin/: fpga_ethash.cpp
libethash-fpga/: CMakeLists.txt  FPGAMiner.cpp  FPGAMiner.h  fpga_ethash.h
miner/: CMakeLists.txt  main.cpp
